# matrix-pdf-summarizer-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  async.md  bot.py  job_queue.py  llm_factory.py  pdf_processor.py  pyproject.toml  user_interactions.py
docs/: concurrent-processing-plan.md  dual-llm-architecture-design.md  dual-llm-configuration-guide.md  dual-llm-implementation-plan.md
prompts/: medical_triage-gpt-4.1.txt  medical_triage.txt  medical_triage_deepseek.txt  medical_triage_secondary.txt
webhook-deployment/: .env.example  README.md  install.sh  matrix-pdf-bot-webhook.service  pyproject.toml  traefik-config.yml  traefik-integration-notes.md  webhook_server.py
